--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>
+      
+      Ruth Estate</title>
+
+      <link
+      rel="icon"
+      href=
+      "https://static.vecteezy.com/system/resources/previews/000/378/951/original/home-vector-icon.jpg"
+      style="border-radius: 20%;"
+      type="image/x-icon"
+  />
   </head>
   <body>
     <div id="root"></div>
